Feature/add portfolio project (#221)
* [FEATURE] add ProjectPortfolioPage

* [FEATURE] add ProjectCategoryPage

* [BUGFIX] modify ProjectCollectionTable

* [FEATURE] add ProjectPortfolioBasicForm

* [FEATURE] add ProjectPortfolioDescriptionForm

* [FEATURE] add ProjectPortfolioSettingsForm

* [BUGFIX] add translations

* [BUGFIX] modify ProjectAdminPage

* [FEATURE] add author role in portfolio project

* [REFATOR] refator add author role in portfolio project

* [BUGFIX] fix repeatedly insert project author role

* [FEATURE] add projectRolePage

* [FEATURE] add ProjectParticipantBlock

* [FEATURE] add protfolio project publish block

* [BUGFIX] add video url original source judgement

* [BUGFIX] fix vimeo and fb watch display bug

--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2126,14 +2126,14 @@
   "project.label.unPublished": "停售，此方案暫停對外銷售，並從專案中隱藏",
   "project.text.introductionDefaultNotice": "預設顯示在手機版與電腦版的圖文內容",
   "project.text.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
-  "project.text.noSalePlan": "尚未訂定募資條件",
-  "project.text.noShippingDays": "尚未訂定售價",
-  "project.text.noShopTitle": "尚未設定專案名稱",
-  "project.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可發佈你的專案。",
-  "project.text.publishedNotation": "現在你的專案已發佈，此專案會出現在頁面上。",
-  "project.text.unpublishedNotation": "你的專案未發佈，此專案並不會顯示在頁面上。",
-  "project.ui.activateShop": "發佈專案",
-  "project.ui.closeShop": "取消發佈",
+  "project.ProjectPublishAdminBlock.noSalePlan": "尚未訂定募資條件",
+  "project.ProjectPublishAdminBlock.noSalePrice": "尚未訂定售價",
+  "project.ProjectPublishAdminBlock.noShopTitle": "尚未設定專案名稱",
+  "project.ProjectPublishAdminBlock.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可發佈你的專案。",
+  "project.ProjectPublishAdminBlock.publishedNotation": "現在你的專案已發佈，此專案會出現在頁面上。",
+  "project.ProjectPublishAdminBlock.unpublishedNotation": "你的專案未發佈，此專案並不會顯示在頁面上。",
+  "project.ProjectPublishAdminBlock.activateShop": "發佈專案",
+  "project.ProjectPublishAdminBlock.closeShop": "取消發佈",
   "project.ui.saveProjectPlan": "儲存方案",
   "promotion.event.successfullyRevoked": "收回成功",
   "promotion.label.amount": "數量",
@@ -2426,5 +2426,42 @@
   "common.label.ogDescription": "og:description",
   "common.label.ogImage": "og:image",
   "common.label.ogImageAlt": "og:image:alt",
-  "common.placeholder.useCommaToSeparateKeywords": "關鍵字需以「 , 」做為區隔"
+  "common.placeholder.useCommaToSeparateKeywords": "關鍵字需以「 , 」做為區隔",
+  "admin.AdminMenu.projectPortfolio": "作品專案",
+  "common.menu.projectPortfolio": "作品專案",
+  "page.ProjectPortfolioPage.createPortfolio": "建立作品",
+  "page.ProjectPortfolioPage.untitledPortfolio": "未命名的作品",
+  "page.ProjectPortfolioPage.projectTitle": "名稱",
+  "project.ProjectCollectionTable.title": "名稱",
+  "project.ProjectCollectionTable.author": "作者",
+  "admin.AdminMenu.projectCategory": "專案分類",
+  "common.menu.projectCategory": "專案分類",
+  "project.ProjectAdminPage.portfolioContent": "作品內容",
+  "project.ProjectAdminPage.portfolioManagement": "作品管理",
+  "project.ProjectAdminPage.publishSettings": "上架設定",
+  "project.ProjectPortfolioSettingsForm.cover": "封面",
+  "project.ProjectPortfolioSettingsForm.defaultImageTips": "建議圖片尺寸：1200*675px",
+  "project.ProjectPortfolioSettingsForm.videoUrl": "影片作品網址",
+  "project.ProjectAdminPage.portfolioSettings": "作品設定",
+  "project.ProjectAdminPage.portfolioDescription": "作品描述",
+  "project.ProjectPortfolioBasicForm.tag": "標籤",
+  "project.ProjectAdminPage.deletePortfolio": "刪除作品",
+  "project.*.portfolioTitle": "名稱",
+  "admin.AdminMenu.projectRole": "角色管理",
+  "common.menu.roleManagement": "角色管理",
+  "common.label.participant": "參與者",
+  "common.ui.addParticipant": "新增參與者",
+  "common.label.selectParticipant": "選擇參與者",
+  "common.label.participantPosition": "職位",
+  "common.ui.editParticipant": "編輯參與者",
+  "common.label.portfolioPublishSettings": "上架設定",
+  "project.ProjectPublishAdminBlock.noAuthor": "作者不可為空",
+  "project.ProjectPublishAdminBlock.noVideoUrl": "影片作品網址",
+  "project.ProjectPublishAdminBlock.notCompletePortfolioNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "project.ProjectPublishAdminBlock.unpublishedPortfolioNotation": "你的作品未發佈，此作品並不會顯示在頁面上。",
+  "project.ProjectPublishAdminBlock.publishedPortfolioNotation": "現在你的作品已發佈，此作品會出現在頁面上。",
+  "project.ProjectPublishAdminBlock.activateNow": "立即發布",
+  "common.text.unpublishingWarning": "將下架且不會出現在列表，已擁有權益的會員仍然可以看到內容。",
+  "project.ProjectPortfolioSettingsForm.defaultVideoTips": "放入影片網址後，如未出現影片預覽，請確認網址是否正確",
+  "project.ProjectPortfolioSettingsForm.hasSameOriginalSource": "平台上已有相同來源的作品"
 }
