--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2564,5 +2564,6 @@
   "project.ProjectPortfolioSettingsForm.defaultVideoTips": "放入影片網址後，如未出現影片預覽，請確認網址是否正確",
   "project.ProjectPortfolioSettingsForm.hasSameOriginalSource": "平台上已有相同來源的作品",
   "project.ProjectParticipantBlock.participantFieldRequired": "請選擇參與者",
-  "project.ProjectParticipantBlock.occupationFieldRequired": "請選擇職位"
+  "project.ProjectParticipantBlock.occupationFieldRequired": "請選擇職位",
+  "common.text.ogImageTips": "建議圖片尺寸：1200*630px"
 }
