[FEATURE] adjust email translation

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -512,6 +512,7 @@
   "common.label.discountDownPrice": "Discount Down Price",
   "common.label.draft": "Draft",
   "common.label.email": "Email",
+  "common.label.emailForEnglish": "Email",
   "common.label.endedAt": "End Time",
   "common.label.example": "Example",
   "common.label.exportFields": "Export Fields",
@@ -2038,7 +2039,6 @@
   "program.label.allProgram": "All Program",
   "program.label.allowMultipleAnswers": "Allow multiple correct answers",
   "program.label.answerDescription": "Answer Description",
-  "program.label.availableForAllContent": "All Content Available",
   "program.label.availableForPastContent": "Past Content Available",
   "program.label.availableToGoBack": "可返回前題",
   "program.label.availableToRetry": "可重新測驗",
@@ -2060,7 +2060,6 @@
   "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": "IndividualExercise",
   "program.label.isCorrectAnswer": "This is the correct answer",
-  "program.label.isPublished": "Whether to display the program",
   "program.label.markIssueAs": "Mark as {status}",
   "program.label.memberList": "Member List",
   "program.label.noExercise": "There are currently no test results",
@@ -2076,9 +2075,7 @@
   "program.label.practice": "Homework Practice",
   "program.label.programAbstract": "Program Abstract",
   "program.label.programDescription": "Program Description",
-  "program.label.programExpirationNotice": "Program Expiration Notice",
   "program.label.programPlanType": "Plan Type",
-  "program.label.published": "Released, immediately after launch",
   "program.label.question": "Question",
   "program.label.salePrice": "Special price ( if not available, please leave blank )",
   "program.label.score": "Score",
@@ -2087,10 +2084,8 @@
   "program.label.selectExercise": "Select Exam",
   "program.label.show": "Show",
   "program.label.subscriptionPeriodType": "Period Type",
-  "program.label.subscriptionPlan": "Subscription Plan",
   "program.label.subscriptionPlanType": "Subscription Plan",
   "program.label.unavailableForPastContent": "UnavailableForPastContent",
-  "program.label.unpublished": "Discontinued, this program is suspended from external sales and hidden",
   "program.label.wholeProgram": "All Programs",
   "program.status.accepted": "Approved",
   "program.status.approved": "Approved",
@@ -2359,6 +2354,8 @@
   "sale.SaleCollectionAdminCard.removeEquity": "Remove Equity",
   "sale.SaleCollectionAdminCard.removeEquityWarning": "This operation will remove the usage rights of {productName} . Are you sure you want to remove it?",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "Equity Change Successfully",
+  "sales.label.assignedAt": "派發日期",
+  "sales.label.assignedLead": "近期派發",
   "sales.label.autoStartCalls": "AutoDial",
   "sales.label.chaileaseApply": "Apply for financing",
   "sales.label.chaileaseLookup": "Sign Up Lookup",
