--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -512,6 +512,7 @@
   "common.label.discountDownPrice": "Harga Diskon",
   "common.label.draft": "Draf",
   "common.label.email": "Email",
+  "common.label.emailForEnglish": "Email",
   "common.label.endedAt": "Waktu Berakhir",
   "common.label.example": "Contoh",
   "common.label.exportFields": "Bidang Ekspor",
@@ -2038,7 +2039,6 @@
   "program.label.allProgram": "Semua Program",
   "program.label.allowMultipleAnswers": "Izinkan beberapa jawaban benar",
   "program.label.answerDescription": "Deskripsi Jawaban",
-  "program.label.availableForAllContent": "Semua Konten Tersedia",
   "program.label.availableForPastContent": "Konten Sebelumnya Tersedia",
   "program.label.availableToGoBack": "可返回前題",
   "program.label.availableToRetry": "可重新測驗",
@@ -2060,7 +2060,6 @@
   "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": "IndividualExercise",
   "program.label.isCorrectAnswer": "Ini adalah jawaban yang benar",
-  "program.label.isPublished": "Apakah akan menampilkan program",
   "program.label.markIssueAs": "Tandai sebagai {status}",
   "program.label.memberList": "Daftar Anggota",
   "program.label.noExercise": "Saat ini tidak ada hasil tes",
@@ -2076,9 +2075,7 @@
   "program.label.practice": "Praktek Pekerjaan Rumah",
   "program.label.programAbstract": "Program Abstrak",
   "program.label.programDescription": "Deskripsi Program",
-  "program.label.programExpirationNotice": "Pemberitahuan Kedaluwarsa Program",
   "program.label.programPlanType": "Jenis Paket",
-  "program.label.published": "Dirilis, segera setelah diluncurkan",
   "program.label.question": "Pertanyaan",
   "program.label.salePrice": "Harga Spesial ( jika tidak tersedia, kosongkan )",
   "program.label.score": "Skor",
@@ -2087,10 +2084,8 @@
   "program.label.selectExercise": "Pilih Ujian",
   "program.label.show": "Tampilkan",
   "program.label.subscriptionPeriodType": "Jenis Periode",
-  "program.label.subscriptionPlan": "Paket Berlangganan",
   "program.label.subscriptionPlanType": "Paket Berlangganan",
   "program.label.unavailableForPastContent": "UnavailableForPastContent",
-  "program.label.unpublished": "Dihentikan, program ini ditangguhkan dari penjualan eksternal dan disembunyikan",
   "program.label.wholeProgram": "Semua Program",
   "program.status.accepted": "Disetujui",
   "program.status.approved": "Disetujui",
@@ -2359,6 +2354,8 @@
   "sale.SaleCollectionAdminCard.removeEquity": "Hapus Ekuitas",
   "sale.SaleCollectionAdminCard.removeEquityWarning": "Operasi ini akan menghapus hak penggunaan {productName} . Yakin ingin menghapusnya?",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "Berhasil Mengubah Ekuitas",
+  "sales.label.assignedAt": "派發日期",
+  "sales.label.assignedLead": "近期派發",
   "sales.label.autoStartCalls": "PanggilOtomatis",
   "sales.label.chaileaseApply": "Ajukan pembiayaan",
   "sales.label.chaileaseLookup": "Pencarian Daftar",
