--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -512,6 +512,7 @@
   "common.label.discountDownPrice": "Giảm giá xuống",
   "common.label.draft": "Bản nháp",
   "common.label.email": "Email",
+  "common.label.emailForEnglish": "Email",
   "common.label.endedAt": "Thời gian kết thúc",
   "common.label.example": " Ví dụ ",
   "common.label.exportFields": " Trường Xuất ",
@@ -2038,7 +2039,6 @@
   "program.label.allProgram": "Tất cả chương trình",
   "program.label.allowMultipleAnswers": " Cho phép nhiều câu trả lời đúng ",
   "program.label.answerDescription": " Câu trả lời Mô tả ",
-  "program.label.availableForAllContent": " Có tất cả nội dung ",
   "program.label.availableForPastContent": " Có sẵn nội dung trước đây ",
   "program.label.availableToGoBack": "可返回前題",
   "program.label.availableToRetry": "可重新測驗",
@@ -2060,7 +2060,6 @@
   "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": " IndividualExercise ",
   "program.label.isCorrectAnswer": " Đây là câu trả lời chính xác ",
-  "program.label.isPublished": " Có hiển thị chương trình hay không ",
   "program.label.markIssueAs": "Đánh dấu là {status}",
   "program.label.memberList": " Danh sách thành viên ",
   "program.label.noExercise": "Hiện tại không có kết quả kiểm tra ",
@@ -2076,9 +2075,7 @@
   "program.label.practice": " Thực hành Bài tập về nhà ",
   "program.label.programAbstract": "Tóm tắt chương trình",
   "program.label.programDescription": "Mô tả Chương trình",
-  "program.label.programExpirationNotice": " Thông báo hết hạn chương trình ",
   "program.label.programPlanType": "Loại gói",
-  "program.label.published": "Đã phát hành, ngay sau khi khởi chạy ",
   "program.label.question": " Câu hỏi ",
   "program.label.salePrice": " Giá đặc biệt ( nếu không có, vui lòng để trống )",
   "program.label.score": " Điểm ",
@@ -2087,10 +2084,8 @@
   "program.label.selectExercise": " Chọn Bài kiểm tra ",
   "program.label.show": " Hiển thị ",
   "program.label.subscriptionPeriodType": "Loại dấu chấm",
-  "program.label.subscriptionPlan": "Gói đăng ký",
   "program.label.subscriptionPlanType": "Gói đăng ký",
   "program.label.unavailableForPastContent": " UnavailableForPastContent ",
-  "program.label.unpublished": " Đã ngừng hoạt động, chương trình này bị tạm ngừng bán hàng bên ngoài và bị ẩn ",
   "program.label.wholeProgram": " Tất cả các chương trình ",
   "program.status.accepted": "Được chấp thuận ",
   "program.status.approved": "Được chấp thuận ",
@@ -2359,6 +2354,8 @@
   "sale.SaleCollectionAdminCard.removeEquity": " Xóa vốn chủ sở hữu ",
   "sale.SaleCollectionAdminCard.removeEquityWarning": " Thao tác này sẽ xóa quyền sử dụng của {productName} . Bạn có chắc chắn muốn xóa không? ",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "Quyền và lợi ích thành công",
+  "sales.label.assignedAt": "派發日期",
+  "sales.label.assignedLead": "近期派發",
   "sales.label.autoStartCalls": "Tự động quay số ",
   "sales.label.chaileaseApply": " Đăng ký tài trợ ",
   "sales.label.chaileaseLookup": "Đăng ký Tra cứu ",
