--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -512,6 +512,7 @@
   "common.label.discountDownPrice": "首期折扣",
   "common.label.draft": "草稿",
   "common.label.email": "信箱",
+  "common.label.emailForEnglish": "Email",
   "common.label.endedAt": "结束时间",
   "common.label.example": "范例",
   "common.label.exportFields": "汇出栏位",
@@ -2038,7 +2039,6 @@
   "program.label.allProgram": "全部课程",
   "program.label.allowMultipleAnswers": "允许多个正确解答",
   "program.label.answerDescription": "解答说明",
-  "program.label.availableForAllContent": "可看课程所有内容",
   "program.label.availableForPastContent": "可看过去内容",
   "program.label.availableToGoBack": "可返回前題",
   "program.label.availableToRetry": "可重新測驗",
@@ -2060,7 +2060,6 @@
   "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": "个别表现",
   "program.label.isCorrectAnswer": "此为正确解答",
-  "program.label.isPublished": "是否显示方案",
   "program.label.markIssueAs": "标记为 {status}",
   "program.label.memberList": "学员名单",
   "program.label.noExercise": "目前尚无任何测验成果",
@@ -2076,9 +2075,7 @@
   "program.label.practice": "作业练习",
   "program.label.programAbstract": "课程摘要",
   "program.label.programDescription": "课程描述",
-  "program.label.programExpirationNotice": "课程到期通知",
   "program.label.programPlanType": "选择课程付费方案",
-  "program.label.published": "发售，上架后立即开卖",
   "program.label.question": "题目",
   "program.label.salePrice": "优惠价 (若无请留空)",
   "program.label.score": "分数",
@@ -2087,10 +2084,8 @@
   "program.label.selectExercise": "选择测验",
   "program.label.show": "显示",
   "program.label.subscriptionPeriodType": "订阅周期",
-  "program.label.subscriptionPlan": "订阅付费方案",
   "program.label.subscriptionPlanType": "订阅付费",
   "program.label.unavailableForPastContent": "不可看过去内容",
-  "program.label.unpublished": "停售，此方案暂停对外销售并隐藏",
   "program.label.wholeProgram": "全部课程",
   "program.status.accepted": "已通过",
   "program.status.approved": "审核通过",
@@ -2359,6 +2354,8 @@
   "sale.SaleCollectionAdminCard.removeEquity": "移除权益",
   "sale.SaleCollectionAdminCard.removeEquityWarning": "此操作将移除{productName}的使用权益，确定要移除吗？",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "权益异动成功",
+  "sales.label.assignedAt": "派發日期",
+  "sales.label.assignedLead": "近期派發",
   "sales.label.autoStartCalls": "自动拨号",
   "sales.label.chaileaseApply": "申请资融",
   "sales.label.chaileaseLookup": "报名查询",
