--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -512,6 +512,7 @@
   "common.label.discountDownPrice": "首期折扣",
   "common.label.draft": "草稿",
   "common.label.email": "信箱",
+  "common.label.emailForEnglish": "Email",
   "common.label.endedAt": "結束時間",
   "common.label.example": "範例",
   "common.label.exportFields": "匯出欄位",
@@ -2042,7 +2043,6 @@
   "program.label.allProgram": "全部課程",
   "program.label.allowMultipleAnswers": "允許多個正確解答",
   "program.label.answerDescription": "解答說明",
-  "program.label.availableForAllContent": "可看課程所有內容",
   "program.label.availableForPastContent": "可看過去內容",
   "program.label.availableToGoBack": "可返回前題",
   "program.label.availableToRetry": "可重新測驗",
@@ -2064,7 +2064,6 @@
   "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": "個別表現",
   "program.label.isCorrectAnswer": "此為正確解答",
-  "program.label.isPublished": "是否顯示方案",
   "program.label.markIssueAs": "標記為 {status}",
   "program.label.memberList": "學員名單",
   "program.label.noExercise": "目前尚無任何測驗成果",
@@ -2080,9 +2079,7 @@
   "program.label.practice": "作業練習",
   "program.label.programAbstract": "課程摘要",
   "program.label.programDescription": "課程描述",
-  "program.label.programExpirationNotice": "課程到期通知",
   "program.label.programPlanType": "選擇課程付費方案",
-  "program.label.published": "發售，上架後立即開賣",
   "program.label.question": "題目",
   "program.label.salePrice": "優惠價 (若無請留空)",
   "program.label.score": "分數",
@@ -2091,10 +2088,8 @@
   "program.label.selectExercise": "選擇測驗",
   "program.label.show": "顯示",
   "program.label.subscriptionPeriodType": "訂閱週期",
-  "program.label.subscriptionPlan": "訂閱付費方案",
   "program.label.subscriptionPlanType": "訂閱付費",
   "program.label.unavailableForPastContent": "不可看過去內容",
-  "program.label.unpublished": "停售，此方案暫停對外銷售並隱藏",
   "program.label.wholeProgram": "全部課程",
   "program.status.accepted": "已通過",
   "program.status.approved": "審核通過",
@@ -2363,6 +2358,8 @@
   "sale.SaleCollectionAdminCard.removeEquity": "移除權益",
   "sale.SaleCollectionAdminCard.removeEquityWarning": "此操作將移除 {productName} 的使用權益，確定要移除嗎？",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "權益異動成功",
+  "sales.label.assignedAt": "派發日期",
+  "sales.label.assignedLead": "近期派發",
   "sales.label.autoStartCalls": "自動撥號",
   "sales.label.chaileaseApply": "申請資融",
   "sales.label.chaileaseLookup": "報名查詢",
