[FEATURE] add totalLeads

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -2039,6 +2039,7 @@
   "program.label.allProgram": "All Program",
   "program.label.allowMultipleAnswers": "Allow multiple correct answers",
   "program.label.answerDescription": "Answer Description",
+  "program.label.availableForAllContent": "可看課程所有內容",
   "program.label.availableForPastContent": "Past Content Available",
   "program.label.availableToGoBack": "可返回前題",
   "program.label.availableToRetry": "可重新測驗",
@@ -2060,6 +2061,7 @@
   "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": "IndividualExercise",
   "program.label.isCorrectAnswer": "This is the correct answer",
+  "program.label.isPublished": "是否顯示方案",
   "program.label.markIssueAs": "Mark as {status}",
   "program.label.memberList": "Member List",
   "program.label.noExercise": "There are currently no test results",
@@ -2075,7 +2077,9 @@
   "program.label.practice": "Homework Practice",
   "program.label.programAbstract": "Program Abstract",
   "program.label.programDescription": "Program Description",
+  "program.label.programExpirationNotice": "課程到期通知",
   "program.label.programPlanType": "Plan Type",
+  "program.label.published": "發售，上架後立即開賣",
   "program.label.question": "Question",
   "program.label.salePrice": "Special price ( if not available, please leave blank )",
   "program.label.score": "Score",
@@ -2084,8 +2088,10 @@
   "program.label.selectExercise": "Select Exam",
   "program.label.show": "Show",
   "program.label.subscriptionPeriodType": "Period Type",
+  "program.label.subscriptionPlan": "訂閱付費方案",
   "program.label.subscriptionPlanType": "Subscription Plan",
   "program.label.unavailableForPastContent": "UnavailableForPastContent",
+  "program.label.unpublished": "停售，此方案暫停對外銷售並隱藏",
   "program.label.wholeProgram": "All Programs",
   "program.status.accepted": "Approved",
   "program.status.approved": "Approved",
@@ -2390,6 +2396,7 @@
   "sales.label.status": "Status",
   "sales.label.studentName": "Student Name",
   "sales.label.tel": "Tel",
+  "sales.label.totalLead": "全部",
   "sales.orderImportModal.description": "Click here to download the template",
   "sales.orderImportModal.failed": "Upload failed",
   "sales.orderImportModal.note": "Maximum file size 10MB",
