--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -2039,6 +2039,7 @@
   "program.label.allProgram": "Semua Program",
   "program.label.allowMultipleAnswers": "Izinkan beberapa jawaban benar",
   "program.label.answerDescription": "Deskripsi Jawaban",
+  "program.label.availableForAllContent": "可看課程所有內容",
   "program.label.availableForPastContent": "Konten Sebelumnya Tersedia",
   "program.label.availableToGoBack": "可返回前題",
   "program.label.availableToRetry": "可重新測驗",
@@ -2060,6 +2061,7 @@
   "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": "IndividualExercise",
   "program.label.isCorrectAnswer": "Ini adalah jawaban yang benar",
+  "program.label.isPublished": "是否顯示方案",
   "program.label.markIssueAs": "Tandai sebagai {status}",
   "program.label.memberList": "Daftar Anggota",
   "program.label.noExercise": "Saat ini tidak ada hasil tes",
@@ -2075,7 +2077,9 @@
   "program.label.practice": "Praktek Pekerjaan Rumah",
   "program.label.programAbstract": "Program Abstrak",
   "program.label.programDescription": "Deskripsi Program",
+  "program.label.programExpirationNotice": "課程到期通知",
   "program.label.programPlanType": "Jenis Paket",
+  "program.label.published": "發售，上架後立即開賣",
   "program.label.question": "Pertanyaan",
   "program.label.salePrice": "Harga Spesial ( jika tidak tersedia, kosongkan )",
   "program.label.score": "Skor",
@@ -2084,8 +2088,10 @@
   "program.label.selectExercise": "Pilih Ujian",
   "program.label.show": "Tampilkan",
   "program.label.subscriptionPeriodType": "Jenis Periode",
+  "program.label.subscriptionPlan": "訂閱付費方案",
   "program.label.subscriptionPlanType": "Paket Berlangganan",
   "program.label.unavailableForPastContent": "UnavailableForPastContent",
+  "program.label.unpublished": "停售，此方案暫停對外銷售並隱藏",
   "program.label.wholeProgram": "Semua Program",
   "program.status.accepted": "Disetujui",
   "program.status.approved": "Disetujui",
@@ -2390,6 +2396,7 @@
   "sales.label.status": "Status",
   "sales.label.studentName": "Nama Mahasiswa",
   "sales.label.tel": "Telp",
+  "sales.label.totalLead": "全部",
   "sales.orderImportModal.description": "Klik di sini untuk mengunduh template",
   "sales.orderImportModal.failed": "Upload gagal",
   "sales.orderImportModal.note": "Ukuran file maksimum 10MB",
