--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -2039,6 +2039,7 @@
   "program.label.allProgram": "Tất cả chương trình",
   "program.label.allowMultipleAnswers": " Cho phép nhiều câu trả lời đúng ",
   "program.label.answerDescription": " Câu trả lời Mô tả ",
+  "program.label.availableForAllContent": "可看課程所有內容",
   "program.label.availableForPastContent": " Có sẵn nội dung trước đây ",
   "program.label.availableToGoBack": "可返回前題",
   "program.label.availableToRetry": "可重新測驗",
@@ -2060,6 +2061,7 @@
   "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": " IndividualExercise ",
   "program.label.isCorrectAnswer": " Đây là câu trả lời chính xác ",
+  "program.label.isPublished": "是否顯示方案",
   "program.label.markIssueAs": "Đánh dấu là {status}",
   "program.label.memberList": " Danh sách thành viên ",
   "program.label.noExercise": "Hiện tại không có kết quả kiểm tra ",
@@ -2075,7 +2077,9 @@
   "program.label.practice": " Thực hành Bài tập về nhà ",
   "program.label.programAbstract": "Tóm tắt chương trình",
   "program.label.programDescription": "Mô tả Chương trình",
+  "program.label.programExpirationNotice": "課程到期通知",
   "program.label.programPlanType": "Loại gói",
+  "program.label.published": "發售，上架後立即開賣",
   "program.label.question": " Câu hỏi ",
   "program.label.salePrice": " Giá đặc biệt ( nếu không có, vui lòng để trống )",
   "program.label.score": " Điểm ",
@@ -2084,8 +2088,10 @@
   "program.label.selectExercise": " Chọn Bài kiểm tra ",
   "program.label.show": " Hiển thị ",
   "program.label.subscriptionPeriodType": "Loại dấu chấm",
+  "program.label.subscriptionPlan": "訂閱付費方案",
   "program.label.subscriptionPlanType": "Gói đăng ký",
   "program.label.unavailableForPastContent": " UnavailableForPastContent ",
+  "program.label.unpublished": "停售，此方案暫停對外銷售並隱藏",
   "program.label.wholeProgram": " Tất cả các chương trình ",
   "program.status.accepted": "Được chấp thuận ",
   "program.status.approved": "Được chấp thuận ",
@@ -2390,6 +2396,7 @@
   "sales.label.status": " Trạng thái ",
   "sales.label.studentName": " Tên sinh viên ",
   "sales.label.tel": "Điện thoại ",
+  "sales.label.totalLead": "全部",
   "sales.orderImportModal.description": " Nhấp vào đây để tải xuống mẫu ",
   "sales.orderImportModal.failed": " Tải lên không thành công ",
   "sales.orderImportModal.note": " Kích thước tệp tối đa 10MB",
