--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -2039,6 +2039,7 @@
   "program.label.allProgram": "全部课程",
   "program.label.allowMultipleAnswers": "允许多个正确解答",
   "program.label.answerDescription": "解答说明",
+  "program.label.availableForAllContent": "可看課程所有內容",
   "program.label.availableForPastContent": "可看过去内容",
   "program.label.availableToGoBack": "可返回前題",
   "program.label.availableToRetry": "可重新測驗",
@@ -2060,6 +2061,7 @@
   "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": "个别表现",
   "program.label.isCorrectAnswer": "此为正确解答",
+  "program.label.isPublished": "是否顯示方案",
   "program.label.markIssueAs": "标记为 {status}",
   "program.label.memberList": "学员名单",
   "program.label.noExercise": "目前尚无任何测验成果",
@@ -2075,7 +2077,9 @@
   "program.label.practice": "作业练习",
   "program.label.programAbstract": "课程摘要",
   "program.label.programDescription": "课程描述",
+  "program.label.programExpirationNotice": "課程到期通知",
   "program.label.programPlanType": "选择课程付费方案",
+  "program.label.published": "發售，上架後立即開賣",
   "program.label.question": "题目",
   "program.label.salePrice": "优惠价 (若无请留空)",
   "program.label.score": "分数",
@@ -2084,8 +2088,10 @@
   "program.label.selectExercise": "选择测验",
   "program.label.show": "显示",
   "program.label.subscriptionPeriodType": "订阅周期",
+  "program.label.subscriptionPlan": "訂閱付費方案",
   "program.label.subscriptionPlanType": "订阅付费",
   "program.label.unavailableForPastContent": "不可看过去内容",
+  "program.label.unpublished": "停售，此方案暫停對外銷售並隱藏",
   "program.label.wholeProgram": "全部课程",
   "program.status.accepted": "已通过",
   "program.status.approved": "审核通过",
@@ -2390,6 +2396,7 @@
   "sales.label.status": "状态",
   "sales.label.studentName": "学员姓名",
   "sales.label.tel": "电话",
+  "sales.label.totalLead": "全部",
   "sales.orderImportModal.description": "点此下载范本",
   "sales.orderImportModal.failed": "上传失败",
   "sales.orderImportModal.note": "档案上限10MB",
