--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2043,6 +2043,7 @@
   "program.label.allProgram": "全部課程",
   "program.label.allowMultipleAnswers": "允許多個正確解答",
   "program.label.answerDescription": "解答說明",
+  "program.label.availableForAllContent": "可看課程所有內容",
   "program.label.availableForPastContent": "可看過去內容",
   "program.label.availableToGoBack": "可返回前題",
   "program.label.availableToRetry": "可重新測驗",
@@ -2064,6 +2065,7 @@
   "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": "個別表現",
   "program.label.isCorrectAnswer": "此為正確解答",
+  "program.label.isPublished": "是否顯示方案",
   "program.label.markIssueAs": "標記為 {status}",
   "program.label.memberList": "學員名單",
   "program.label.noExercise": "目前尚無任何測驗成果",
@@ -2079,7 +2081,9 @@
   "program.label.practice": "作業練習",
   "program.label.programAbstract": "課程摘要",
   "program.label.programDescription": "課程描述",
+  "program.label.programExpirationNotice": "課程到期通知",
   "program.label.programPlanType": "選擇課程付費方案",
+  "program.label.published": "發售，上架後立即開賣",
   "program.label.question": "題目",
   "program.label.salePrice": "優惠價 (若無請留空)",
   "program.label.score": "分數",
@@ -2088,8 +2092,10 @@
   "program.label.selectExercise": "選擇測驗",
   "program.label.show": "顯示",
   "program.label.subscriptionPeriodType": "訂閱週期",
+  "program.label.subscriptionPlan": "訂閱付費方案",
   "program.label.subscriptionPlanType": "訂閱付費",
   "program.label.unavailableForPastContent": "不可看過去內容",
+  "program.label.unpublished": "停售，此方案暫停對外銷售並隱藏",
   "program.label.wholeProgram": "全部課程",
   "program.status.accepted": "已通過",
   "program.status.approved": "審核通過",
@@ -2394,6 +2400,7 @@
   "sales.label.status": "狀態",
   "sales.label.studentName": "學員姓名",
   "sales.label.tel": "電話",
+  "sales.label.totalLead": "全部",
   "sales.orderImportModal.description": "點此下載範本",
   "sales.orderImportModal.failed": "上傳失敗",
   "sales.orderImportModal.note": "檔案上限 10MB",
